resturant listing wraping and responsive correction

--- a/css/styles.css
+++ b/css/styles.css
@@ -179,6 +179,9 @@ nav h1 a {
   padding: 30px 15px 60px;
   text-align: center;
   display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 #restaurants-list li {
